--- a/MSR/MSR-3-Critical-Sensitive.jrxml
+++ b/MSR/MSR-3-Critical-Sensitive.jrxml
@@ -12,7 +12,9 @@
 	<property name="com.jaspersoft.studio.unit.rightMargin" value="pixel"/>
 	<property name="com.jaspersoft.studio.unit.columnWidth" value="pixel"/>
 	<property name="com.jaspersoft.studio.unit.columnSpacing" value="pixel"/>
-	<template><![CDATA["/Styles/Assl-Style-Template.jrtx"]]></template>
+	<property name="ireport.jasperserver.url" value="http://cloudit-eprocess:8083/jasperserver/"/>
+	<property name="ireport.jasperserver.user" value="palg"/>
+	<template><![CDATA["repo:/Templates/Styles/Assl_Style_Template.jrtx"]]></template>
 	<style name="Table_TH" mode="Opaque" backcolor="#004893">
 		<box>
 			<pen lineWidth="0.5" lineColor="#000000"/>
@@ -267,12 +269,12 @@ IF($F{confidentiality}.equals("DC3"),"DC3 - Confidential", IF($F{confidentiality
 		<band height="30" splitType="Stretch">
 			<property name="com.jaspersoft.studio.unit.height" value="px"/>
 			<image>
-				<reportElement x="0" y="19" width="153" height="10" uuid="77e3d1cc-ad87-4aa5-ab0f-bb56639e322e"/>
-				<imageExpression><![CDATA["Images/Avaloq/AVA_claim_100_rgb_black.png"]]></imageExpression>
+				<reportElement x="0" y="20" width="153" height="10" uuid="4e52dd98-f201-4d52-b016-27dc07cbba1f"/>
+				<imageExpression><![CDATA["repo:/Templates/Images/Avaloq/AVA_claim_100_rgb_black.png"]]></imageExpression>
 			</image>
 			<image>
-				<reportElement x="650" y="8" width="80" height="21" uuid="5bb9bbd0-77da-46c6-a177-aab67a119238"/>
-				<imageExpression><![CDATA["Images/Avaloq/AVA_logo_100_rgb.png"]]></imageExpression>
+				<reportElement x="650" y="9" width="80" height="21" uuid="1d964262-a8fe-4dac-b9e6-1d9d710ceb34"/>
+				<imageExpression><![CDATA["repo:/Templates/Images/Avaloq/AVA_logo_100_rgb.png"]]></imageExpression>
 			</image>
 		</band>
 	</pageFooter>
