--- a/MSR/MSR-4.1-Sentinel-BU.jrxml
+++ b/MSR/MSR-4.1-Sentinel-BU.jrxml
@@ -11,7 +11,9 @@
 	<property name="com.jaspersoft.studio.unit.rightMargin" value="pixel"/>
 	<property name="com.jaspersoft.studio.unit.columnWidth" value="pixel"/>
 	<property name="com.jaspersoft.studio.unit.columnSpacing" value="pixel"/>
-	<template><![CDATA["/Styles/Assl-Style-Template.jrtx"]]></template>
+	<property name="ireport.jasperserver.url" value="http://cloudit-eprocess:8083/jasperserver/"/>
+	<property name="ireport.jasperserver.user" value="palg"/>
+	<template><![CDATA["repo:/Templates/Styles/Assl_Style_Template.jrtx"]]></template>
 	<style name="Table_TH" mode="Opaque" backcolor="#004893">
 		<box>
 			<pen lineWidth="0.5" lineColor="#000000"/>
@@ -158,9 +160,7 @@
   						FROM msr.avq_users AC2 
   						WHERE LOWER(AC2.customer) =  lower($P{customer})
   						AND AC2.export_date  =  to_date( $P{selected_date} , 'YYYYMMDD') - interval '1 month'
-  						AND lower(AC2.accountstatus) = 'open')
-  						
-  						]]>
+  						AND lower(AC2.accountstatus) = 'open')]]>
 		</queryString>
 		<field name="rownum" class="java.lang.Long">
 			<property name="com.jaspersoft.studio.field.label" value="rownum"/>
@@ -227,7 +227,7 @@
   						FROM msr.avq_users AC2 
   						WHERE LOWER(AC2.customer) = lower(ac.customer)
   						AND AC2.export_date = ac.export_date + interval '1 month'
-  						AND lower(AC2.accountstatus) = 'open')  						]]>
+  						AND lower(AC2.accountstatus) = 'open')]]>
 		</queryString>
 		<field name="rownum" class="java.lang.Long">
 			<property name="com.jaspersoft.studio.field.label" value="rownum"/>
@@ -821,7 +821,7 @@
 				</jr:table>
 			</componentElement>
 			<textField bookmarkLevel="1">
-				<reportElement style="Header-4" positionType="Float" stretchType="RelativeToTallestObject" x="0" y="0" width="730" height="20" uuid="38418783-cc9b-4efa-89ae-b5bc693a1cfc"/>
+				<reportElement style="Header-4" positionType="Float" x="0" y="0" width="730" height="20" uuid="38418783-cc9b-4efa-89ae-b5bc693a1cfc"/>
 				<textElement>
 					<font fontName="Arial" size="14"/>
 				</textElement>
@@ -1047,12 +1047,12 @@
 		<band height="30" splitType="Stretch">
 			<property name="com.jaspersoft.studio.unit.height" value="px"/>
 			<image>
-				<reportElement x="0" y="19" width="153" height="10" uuid="8884778b-c128-4427-ba08-1601f7b94dc7"/>
-				<imageExpression><![CDATA["Images/Avaloq/AVA_claim_100_rgb_black.png"]]></imageExpression>
+				<reportElement x="0" y="20" width="153" height="10" uuid="c30641e1-00fc-441b-ad64-0c4116ea7cdc"/>
+				<imageExpression><![CDATA["repo:/Templates/Images/Avaloq/AVA_claim_100_rgb_black.png"]]></imageExpression>
 			</image>
 			<image>
-				<reportElement x="650" y="8" width="80" height="21" uuid="6ed88007-f246-434a-a824-ae8ff63ac93f"/>
-				<imageExpression><![CDATA["Images/Avaloq/AVA_logo_100_rgb.png"]]></imageExpression>
+				<reportElement x="650" y="9" width="80" height="21" uuid="9f206b98-8472-44a9-aa00-27c306c54873"/>
+				<imageExpression><![CDATA["repo:/Templates/Images/Avaloq/AVA_logo_100_rgb.png"]]></imageExpression>
 			</image>
 		</band>
 	</pageFooter>
