--- a/MSR/Monthly-Security-Report-Book_toc.jrxml
+++ b/MSR/Monthly-Security-Report-Book_toc.jrxml
@@ -8,7 +8,7 @@
 	<property name="com.jaspersoft.studio.unit.columnWidth" value="pixel"/>
 	<property name="com.jaspersoft.studio.unit.columnSpacing" value="pixel"/>
 	<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
-	<template><![CDATA["/Styles/Assl-Style-Template.jrtx"]]></template>
+	<template><![CDATA["repo:/Templates/Styles/Assl_Style_Template.jrtx"]]></template>
 	<style name="Title" hTextAlign="Right" hImageAlign="Right" fontSize="32">
 		<box>
 			<topPen lineWidth="1.0"/>
