--- a/MSR/ReportCover.jrxml
+++ b/MSR/ReportCover.jrxml
@@ -2,10 +2,9 @@
 <!-- Created with Jaspersoft Studio version 7.3.1.final using JasperReports Library version 6.8.1-3d4b87119c827be13776e451fb3738062f84a87d  -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="ReportCoverTemplate" pageWidth="595" pageHeight="842" columnWidth="595" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" isFloatColumnFooter="true" uuid="46a3caf7-2821-4a54-a400-0ee9ac3664de">
 	<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
-	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="Jasper PRD"/>
-	<property name="ireport.jasperserver.url" value="https://jasper.mgt.ac.avaloqsourcing.net:8443/jasperserver-pro/"/>
-	<property name="ireport.jasperserver.user" value="jasperadmin"/>
-	<property name="ireport.jasperserver.reportUnit" value="/templates/Cover/ReportCoverTemplate"/>
+	<property name="ireport.jasperserver.url" value="http://cloudit-eprocess:8083/jasperserver/"/>
+	<property name="ireport.jasperserver.user" value="palg"/>
+	<property name="ireport.jasperserver.reportUnit" value="/Templates/Cover/ReportCover"/>
 	<property name="com.jaspersoft.studio.unit.pageHeight" value="pixel"/>
 	<property name="com.jaspersoft.studio.unit.pageWidth" value="pixel"/>
 	<property name="com.jaspersoft.studio.unit.topMargin" value="pixel"/>
@@ -14,7 +13,8 @@
 	<property name="com.jaspersoft.studio.unit.rightMargin" value="pixel"/>
 	<property name="com.jaspersoft.studio.unit.columnWidth" value="pixel"/>
 	<property name="com.jaspersoft.studio.unit.columnSpacing" value="pixel"/>
-	<template><![CDATA["/Styles/Assl-Style-Template.jrtx"]]></template>
+	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="Data Adapter\jasper-msr.xml"/>
+	<template><![CDATA["repo:/Templates/Styles/Assl_Style_Template.jrtx"]]></template>
 	<parameter name="coverTitle" class="java.lang.String">
 		<defaultValueExpression><![CDATA["Newsletter template"]]></defaultValueExpression>
 	</parameter>
@@ -38,7 +38,7 @@
 					<property name="com.jaspersoft.studio.unit.x" value="px"/>
 					<property name="com.jaspersoft.studio.unit.y" value="px"/>
 				</reportElement>
-				<imageExpression><![CDATA["/Images/Client-Security-Report_CG.jpg"]]></imageExpression>
+				<imageExpression><![CDATA["repo:/Templates/Images/Client_Security_Report_CG.jpg"]]></imageExpression>
 			</image>
 			<rectangle radius="15">
 				<reportElement mode="Opaque" x="30" y="100" width="510" height="61" forecolor="#0097DB" backcolor="rgba(0, 151, 219, 0.6862745)" uuid="f412760f-9cf5-4360-ba1c-64c4c17f4939"/>
@@ -65,7 +65,10 @@
 				</graphicElement>
 			</rectangle>
 			<textField>
-				<reportElement style="coverTitleStyle" mode="Transparent" x="47" y="117" width="453" height="57" forecolor="#FFFCFC" uuid="c3a07ed4-e00a-42b1-aeac-75dbbe9e47d3"/>
+				<reportElement style="coverTitleStyle" mode="Transparent" x="47" y="117" width="453" height="57" forecolor="#FFFFFF" backcolor="#FFFFFF" uuid="c3a07ed4-e00a-42b1-aeac-75dbbe9e47d3"/>
+				<textElement>
+					<font size="26"/>
+				</textElement>
 				<textFieldExpression><![CDATA[$P{coverTitle}]]></textFieldExpression>
 			</textField>
 			<textField>
